fixed card spacing

--- a/my-app/src/AboutUs.css
+++ b/my-app/src/AboutUs.css
@@ -56,7 +56,7 @@
     display: flex;
     margin-right: auto;
     margin-left: auto;
-    width: 80%;
+    width: 83%;
     /* margin: 10%; */
     /* padding: 5%; */
 }
